--- a/prototype.html
+++ b/prototype.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,18 @@
   <link rel="stylesheet" href="styles.css">
   <title>Ugly game</title>
 </head>
+
 <body>
 
-  <div id="main-content"></div>  
+  <div class="main-content">
+    <div class="starting-screen">
+      <h1 class="game-title">Your score :</h1>
+      <button class="play-button">Try again</button>      
+    </div>
+  </div>
 
-  <script src="main.js"></script>  
-  <script src="game.js"></script>  
-  <script src="player.js"></script>
+  <script src="main.js"></script>
+  <script src="game.js"></script>
 </body>
+
 </html>
