before animate things

--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
   <script src="main.js"></script>  
   <script src="game.js"></script>  
   <script src="player.js"></script>
+  <script src="target.js"></script>
+  
 </body>
 </html>
