--- a/prototype.html
+++ b/prototype.html
@@ -12,9 +12,9 @@
 <body>
 
   <div class="main-content">
-    <div class="starting-screen">
+    <div class="screen">
       <h1 class="game-title">Your score :</h1>
-      <button class="play-button">Try again</button>      
+      <button class="button">Try again</button>      
     </div>
   </div>
 
